[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/space-background.png" type="Texture2D" id=1]
[ext_resource path="res://themes_fonts/space_theme.tres" type="Theme" id=2]
[ext_resource path="res://subscenes/broadcast/broadcast_main.gd" type="Script" id=3]
[ext_resource path="res://assets/arrow_disabled.png" type="Texture2D" id=4]
[ext_resource path="res://assets/arrow_hover.png" type="Texture2D" id=5]
[ext_resource path="res://assets/arrow.png" type="Texture2D" id=6]

[node name="BroadcastBG" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 3 )

[node name="Start" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -65.0

[node name="GoBack" type="PanelContainer" parent="Start"]
offset_top = 385.0
offset_right = 55.0
offset_bottom = 615.0
custom_minimum_size = Vector2( 55, 230 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="TextureButton" parent="Start/GoBack"]
offset_left = 7.0
offset_top = 15.0
offset_right = 47.0
offset_bottom = 215.0
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )

[node name="Empty" type="Control" parent="Start"]
offset_left = 59.0
offset_right = 74.0
offset_bottom = 1000.0
custom_minimum_size = Vector2( 15, 0 )

[node name="Level1" type="VBoxContainer" parent="Start"]
offset_left = 78.0
offset_right = 637.0
offset_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty2" type="Control" parent="Start"]
offset_left = 641.0
offset_right = 656.0
offset_bottom = 1000.0
custom_minimum_size = Vector2( 15, 0 )

[node name="Level2" type="VBoxContainer" parent="Start"]
offset_left = 660.0
offset_right = 1219.0
offset_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty3" type="Control" parent="Start"]
offset_left = 1223.0
offset_right = 1238.0
offset_bottom = 1000.0
custom_minimum_size = Vector2( 15, 0 )

[node name="Level3" type="VBoxContainer" parent="Start"]
offset_left = 1242.0
offset_right = 1801.0
offset_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty4" type="Control" parent="Start"]
offset_left = 1805.0
offset_right = 1820.0
offset_bottom = 1000.0
custom_minimum_size = Vector2( 15, 0 )

[node name="GoForward" type="PanelContainer" parent="Start"]
offset_left = 1824.0
offset_top = 385.0
offset_right = 1879.0
offset_bottom = 615.0
custom_minimum_size = Vector2( 55, 230 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="TextureButton" parent="Start/GoForward"]
offset_left = 7.0
offset_top = 15.0
offset_right = 47.0
offset_bottom = 215.0
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )
flip_h = true

[node name="Counter" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -7.0

[node name="Empty" type="Control" parent="Counter"]
offset_right = 70.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 70, 10 )

[node name="Count1" type="MarginContainer" parent="Counter"]
offset_left = 74.0
offset_right = 636.0
offset_bottom = 53.0
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="Counter/Count1"]
offset_left = 254.0
offset_top = 5.0
offset_right = 308.0
offset_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="Counter/Count1/Panel"]
offset_left = 2.0
offset_top = 2.0
offset_right = 52.0
offset_bottom = 41.0
custom_minimum_size = Vector2( 50, 0 )
text = "1"
align = 1
valign = 1

[node name="Empty3" type="Control" parent="Counter"]
offset_left = 640.0
offset_right = 655.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 15, 0 )

[node name="Count2" type="MarginContainer" parent="Counter"]
offset_left = 659.0
offset_right = 1221.0
offset_bottom = 53.0
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="Counter/Count2"]
offset_left = 254.0
offset_top = 5.0
offset_right = 308.0
offset_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="Counter/Count2/Panel"]
offset_left = 2.0
offset_top = 2.0
offset_right = 52.0
offset_bottom = 41.0
custom_minimum_size = Vector2( 50, 0 )
text = "2"
align = 1
valign = 1

[node name="Empty4" type="Control" parent="Counter"]
offset_left = 1225.0
offset_right = 1240.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 15, 0 )

[node name="Count3" type="MarginContainer" parent="Counter"]
offset_left = 1244.0
offset_right = 1806.0
offset_bottom = 53.0
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="Counter/Count3"]
offset_left = 254.0
offset_top = 5.0
offset_right = 308.0
offset_bottom = 48.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Label" type="Label" parent="Counter/Count3/Panel"]
offset_left = 2.0
offset_top = 2.0
offset_right = 52.0
offset_bottom = 41.0
custom_minimum_size = Vector2( 50, 0 )
text = "3"
align = 1
valign = 1

[node name="Empty2" type="Control" parent="Counter"]
offset_left = 1810.0
offset_right = 1880.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 70, 10 )

[node name="SubScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="Start/GoBack/Button" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="Start/GoForward/Button" to="." method="_on_GoForwardButton_pressed"]
